--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=The Barovian Boom Boys
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://strahd.smore.me
 SHOW_CREATED_TIMESTAMP=false
